# static-constraint-decoding

./: .gitignore  LICENSE  README.md  __init__.py  csr_utils.py  example.ipynb  onerec_demo.ipynb  pyproject.toml
.github/workflows/: ci.yml
.ipynb_checkpoints/: example-checkpoint.ipynb
benchmarks/: baselines_jax.py  run_branch_benchmark_jax.py  run_branch_benchmark_pt.py  run_comparative_benchmark_jax.py  run_k_benchmark_jax.py  run_k_benchmark_pt.py
static/: decoding_jax.py  decoding_pt.py
static_decoding/: csr_utils.py  decoding_jax.py  decoding_pt.py
static_pt/: __init__.py  decoding.py
tests/: test_baselines_jax.py  test_csr_builder.py  test_jax_decoding.py  test_pt_decoding.py
